<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Boy" />

    <TextView
        android:id="@+id/boy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#4CAF50"
        android:digits="0123456789"
        android:hapticFeedbackEnabled="false"
        android:inputType="number"
        android:maxLength="3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/kilo_tv" />

    <TextView
        android:id="@+id/kilo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="50 kg" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:progress="20"
        android:layout_column="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Cinsiyet" />

    <RadioButton
        android:id="@+id/erkek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:checked="true"
        android:text="@string/Erkek" />

    <RadioButton
        android:id="@+id/kadin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/Kadin" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/ideal_kilo_tv" />

    <TextView
        android:id="@+id/ideal_tv"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#673AB7"
        android:text="" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Durum" />

    <TextView
        android:id="@+id/durum_tv"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#3F51B5"
        android:text="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="294dp"
        android:layout_height="456dp"
        android:layout_row="7"
        android:layout_column="1"
        android:text="Yanlış Diyetin Sonuçları:

Diyet yapan kişilerin düştüğü en önemli
hatalardan biri vücuda yeterli miktarda karbonhidrat vermemektir.
Diyete başladığı zaman ekmek, pilav, makarna,
patates, mısır gibi besinleri tamamen kesen kişilerin
metabolizması ihtiyacı olan karbonhidratı
GLİKOJEN DEPOSU VE KANDAKİ ŞEKER BİTİNCE
 kas içerisindeki
karbonhidrattan kullanmaya başlar, bu da kas
kaybı anlamına gelir ve vücut beraberinde su kaybeder.
Yani diyette karbonhidratı kesen kimse tartıdaki
sonucu görünce kilo verdiği yanılgısına düşer ancak
 gerçek olan vücudun kaybettiği yağ değil, kas ve sudur."
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:text="Beslenme" />




</GridLayout>